RESOLVED FIXED196209
Layout Test js/math-clz32.html is failing
https://bugs.webkit.org/show_bug.cgi?id=196209
Summary Layout Test js/math-clz32.html is failing
Per Arne Vollan
Reported 2019-03-25 12:14:47 PDT
The following layout test is failing on Windows: js/math-clz32.html Probable cause: Unknown. Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=js%2Fmath-clz32.html
Attachments
Patch (1.08 KB, patch)
2019-03-25 13:59 PDT, Per Arne Vollan
no flags
Archive of layout-test-results from ews202 for win-future (12.93 MB, application/zip)
2019-03-26 04:33 PDT, EWS Watchlist
no flags
Patch (2.18 KB, patch)
2019-03-26 11:47 PDT, Per Arne Vollan
no flags
Archive of layout-test-results from ews200 for win-future (12.87 MB, application/zip)
2019-03-26 15:11 PDT, EWS Watchlist
no flags
Patch (2.23 KB, patch)
2019-03-26 19:45 PDT, Per Arne Vollan
ross.kirsling: review+
Patch (3.03 KB, patch)
2019-03-27 07:17 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2019-03-25 13:59:55 PDT
EWS Watchlist
Comment 2 2019-03-26 04:33:08 PDT
Comment on attachment 365894 [details] Patch Attachment 365894 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/11670764 New failing tests: animations/resume-after-page-cache.html
EWS Watchlist
Comment 3 2019-03-26 04:33:20 PDT
Created attachment 365958 [details] Archive of layout-test-results from ews202 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews202 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
Per Arne Vollan
Comment 4 2019-03-26 11:47:48 PDT
EWS Watchlist
Comment 5 2019-03-26 15:10:59 PDT
Comment on attachment 365979 [details] Patch Attachment 365979 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/11675653 New failing tests: js/math-clz32.html
EWS Watchlist
Comment 6 2019-03-26 15:11:11 PDT
Created attachment 366011 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Per Arne Vollan
Comment 7 2019-03-26 19:45:45 PDT
Ross Kirsling
Comment 8 2019-03-26 20:09:20 PDT
Comment on attachment 366041 [details] Patch We should move the `bitSize64` declaration under #if COMPILER(GCC_COMPATIBLE) while we're at it.
Ross Kirsling
Comment 9 2019-03-26 20:20:25 PDT
Er whoops, looks like the `- 1` from your first patch attempt is also necessary for x64. (The off-by-one was pretty clearly introduced here: https://github.com/WebKit/webkit/commit/743154c6e5aef8c3d74d16540708f0c5ef09f5df#diff-9b03cfd7f9672cf12ab87ca5592ebd4cL670)
Per Arne Vollan
Comment 10 2019-03-27 07:17:21 PDT
Per Arne Vollan
Comment 11 2019-03-27 07:18:30 PDT
(In reply to Ross Kirsling from comment #9) > Er whoops, looks like the `- 1` from your first patch attempt is also > necessary for x64. > > (The off-by-one was pretty clearly introduced here: > https://github.com/WebKit/webkit/commit/ > 743154c6e5aef8c3d74d16540708f0c5ef09f5df#diff- > 9b03cfd7f9672cf12ab87ca5592ebd4cL670) Thanks for reviewing! I have updated the patch.
WebKit Commit Bot
Comment 12 2019-03-27 09:12:28 PDT
Comment on attachment 366068 [details] Patch Clearing flags on attachment: 366068 Committed r243544: <https://trac.webkit.org/changeset/243544>
Radar WebKit Bug Importer
Comment 13 2020-03-22 05:16:23 PDT
Note You need to log in before you can comment on or make changes to this bug.