Layout Test js/math-clz32.html is failing https://bugs.webkit.org/show_bug.cgi?id=196209

Reviewed by Ross Kirsling.

Source/WTF:

Use the correct number of loop iterations when counting leading zeros. Also, the
count was off by one for the Win64 case.

* wtf/MathExtras.h:
(WTF::clz):

LayoutTests:

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/210594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243544 268f45cc-cd09-0410-ab3c-d52691b4dbfc